--- a/github/workflows/game.ipynb
+++ b/github/workflows/game.ipynb
@@ -6,13 +6,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#test\n"
+    "#Start of game\n",
+    "#Creating class for player profile\n",
+    "#Creating classes for characters\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "class Player:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        self.health = 100\n",
+    "        self.inventory = []"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
