galaxy class, will probably add more

--- a/github/workflows/game.ipynb
+++ b/github/workflows/game.ipynb
@@ -63,11 +63,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#galaxy class"
+    "#galaxy class\n",
+    "class Galaxy:\n",
+    "    def __init__(self):\n",
+    "        self.planets = [\n",
+    "            Planet(\"Nebula\", 1),\n",
+    "            Planet(\"Area 151\", 2),\n",
+    "            Planet(\"Drull\", 3),\n",
+    "        ]\n",
+    "    def show_planets(self):\n",
+    "        print(\"Planets among this galaxy:\")\n",
+    "        for i, planet in enumerate(self.planets, 1):\n",
+    "            print(f\"{i}. {planet.name} (Difficulty: {planet.difficulty})\")\n",
+    "            "
    ]
   },
   {
